# simplified_rag

./: README.md  app.py  pyproject.toml
simplified_rag/: RAG.py
